--- a/API/.travis.yml
+++ b/API/.travis.yml
@@ -1,11 +1,8 @@
 language: python
 python:
   - "3.5.2"
+cache: pip
 # command to install dependencies
-install:
-  - pip install -r requirements.txt
+install: "pip install -r requirements.txt"
 # command to run tests
-script:
-  - nosetests --with-coverage
-after_success:
-  - coveralls
+script: python tests/test_api.py
