--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: python
 python:
   - "3.5.2"
-cache: pip
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+  - pip install -r requirements.txt
 # command to run tests
-script: python tests/test_api.py
+script:
+  - nosetests --with-coverage
+after_success:
+  - coveralls
